--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
     "name": "bower-rails generated vendor assets",
     "dependencies": {
       "angular" : "v1.5.8",
-      "angular-ui-router" : "latest"
+      "angular-ui-router" : "latest",
+      "angular-devise": "latest"
     }
   }
 }
